# DLO_planning_2

./: .gitignore  LICENSE  README.md
data/ur5_reach_space/: params.npy
docs/: index.md
simulator_unity_ros/: .gitignore  README.md
simulator_unity_ros/Assets/: msgbrowser_settings.asset  packages.config
simulator_unity_ros/Assets/ML-Agents/Timers/: RodScene_origin_timers.json  rod_0_2D_timers.json  rod_0_3D_data_collection_timers.json  rod_0_3D_timers.json  rod_0_timers.json  rod_10_2D_timers.json  rod_10_3D_timers.json  rod_10_timers.json  rod_1_2D_timers.json  rod_1_3D_timers.json  rod_1_timers.json  rod_2_2D_timers.json  rod_2_3D_timers.json  rod_2_timers.json  rod_3_2D_timers.json  rod_3_3D_timers.json  rod_3_timers.json  rod_4_2D_timers.json  rod_4_3D_timers.json  rod_4_timers.json  rod_5_2D_timers.json  rod_5_3D_timers.json  rod_5_timers.json  rod_6_2D_timers.json  rod_6_3D_timers.json  rod_6_timers.json  rod_7_2D_timers.json  rod_7_3D_timers.json  rod_7_timers.json  rod_8_2D_timers.json  rod_8_3D_timers.json  rod_8_timers.json  rod_9_2D_timers.json  rod_9_3D_timers.json  rod_9_timers.json
simulator_unity_ros/Assets/Materials/: MaskMaterial.mat  NoFrictionPhysicMaterial.physicMaterial  TableMaterial.mat  WorkSpaceMaterial.mat  WorkSpaceMaterial2.mat  distance field.asset  hook.FBX  myRodBluePrint.asset  obstacle.mat  rod blueprint 1.asset  rod0.asset  rod1.asset  rod10.asset  rod2.asset  rod3.asset  rod4.asset  rod5.asset  rod6.asset  rod7.asset  rod8.asset  rod9.asset
simulator_unity_ros/Assets/Obi/Editor/Resources/: DistanceFieldPreview.mat
simulator_unity_ros/Assets/Obi/Samples/RopeAndRod/: Chains.unity  Crane.unity  ElectricalWires.unity  FreightLift.unity  Plectoneme.unity  Rocker.unity  RopeAndJoints.unity  RopeShowcase.unity  SpringRod.unity  WrapTheRope.unity
simulator_unity_ros/Assets/Prefabs/: Table Variant.prefab  UR3.prefab  dual_ur_robotiq2f85.prefab  ur5e.prefab
simulator_unity_ros/Assets/Resources/: ROSConnectionPrefab.prefab
simulator_unity_ros/Assets/Scenes/: scene_0.unity  scene_1.unity  scene_2.unity  scene_3.unity  scene_4.unity  scene_5.unity  scene_6.unity  scene_fig1.unity  scene_fund_1.unity  scene_fund_2.unity
simulator_unity_ros/Assets/Scenes/bck/: scene10_rod0_3D.unity  scene11_rod2_3D.unity  scene12_rod4_3D.unity  scene13_rod0_2D.unity  scene14_rod0_3D.unity  scene4_rod0_3D.unity  scene6_rod0_3D.unity  scene8_rod4_3D.unity  scene9_rod2_3D.unity
simulator_unity_ros/Assets/Scripts/: DesiredMarks.cs  Obstacles.cs  Robot.cs  Rod.cs  SimArea.cs
simulator_unity_ros/Assets/URDF/: dual_ur5_robotiq2f85.urdf
simulator_unity_ros/Assets/URDF/Materials/: rgba-0.6-0.6-0.6-1.mat
simulator_unity_ros/Assets/URDF/dual_ur_description/meshes/: dual_base.prefab  dual_base_0.asset  dual_base_1.asset  dual_base_10.asset  dual_base_11.asset  dual_base_12.asset  dual_base_13.asset  dual_base_14.asset  dual_base_15.asset  dual_base_16.asset  dual_base_17.asset  dual_base_18.asset  dual_base_19.asset  dual_base_2.asset  dual_base_20.asset  dual_base_21.asset  dual_base_22.asset  dual_base_23.asset  dual_base_24.asset  dual_base_25.asset  dual_base_26.asset  dual_base_27.asset  dual_base_28.asset  dual_base_29.asset  dual_base_3.asset  dual_base_4.asset  dual_base_5.asset  dual_base_6.asset  dual_base_7.asset  dual_base_8.asset  dual_base_9.asset
simulator_unity_ros/Assets/URDF/robotiq_2f_85_gripper_visualization/meshes/collision/: robotiq_arg2f_base_link.prefab
simulator_unity_ros/Assets/URDF/robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_base_link.prefab
simulator_unity_ros/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset  TimeManager.asset
ws_dlo/src/: .rosinstall  .rosinstall.bak
ws_dlo/src/dlo_arm_planning_pkg/: CMakeLists.txt  package.xml
ws_dlo/src/dlo_arm_planning_pkg/app/: add_dual_base_as_obstacles_sim.cpp  eval_controller.cpp  eval_planner.cpp  example_planner_without_unity.cpp  example_vis_derm_projection.cpp
ws_dlo/src/dlo_arm_planning_pkg/config/sim/: configs.yaml  dual_ur_collision_shape_spheres.yaml  dual_ur_configs.yaml  move_group_octomap.yaml  planner_configs.yaml
ws_dlo/src/dlo_arm_planning_pkg/include/dlo_arm_planning_pkg/: arm.h  arm_reach_space.h  cnpy_utils.h  collision_detection_fcl.h  common_include.h  controller.h  dlo.h  dlo_state.h  dual_arm.h  jacobian_model.h  node.h  planning_interface.h  real_time_interface.h  scene.h  ur5.h  visualize.h
ws_dlo/src/dlo_arm_planning_pkg/include/dlo_arm_planning_pkg/dlo_model/: derm_ceres.h  derm_eigen.h  derm_ipopt.h
ws_dlo/src/dlo_arm_planning_pkg/include/dlo_arm_planning_pkg/mpc/: mpc_base.h  multi_step_mpc.h
ws_dlo/src/dlo_arm_planning_pkg/include/dlo_arm_planning_pkg/mpc/multi_step_mpc_ifopt/: constraints.h  costs.h  variables.h
ws_dlo/src/dlo_arm_planning_pkg/include/dlo_arm_planning_pkg/planner/: joint_birrt.h  planner_base.h
ws_dlo/src/dlo_arm_planning_pkg/include/utils/: utils.h
ws_dlo/src/dlo_arm_planning_pkg/launch/sim/: sim_prepare.launch
ws_dlo/src/dlo_arm_planning_pkg/models/rbfWeights/3D/10*6/: centres.npy  model_J.pth  sigmas.npy  weight_matrix.npy
ws_dlo/src/dlo_arm_planning_pkg/rviz/: sim.rviz
ws_dlo/src/dlo_arm_planning_pkg/scripts/results/: eval_controller.py  eval_planner.py  plot_derm_projection.py
ws_dlo/src/dlo_arm_planning_pkg/scripts/utils/: derm.py
ws_dlo/src/dlo_arm_planning_pkg/src/: arm.cpp  arm_reach_space.cpp  collision_detection_fcl.cpp  controller.cpp  dlo.cpp  dlo_state.cpp  dual_arm.cpp  jacobian_model.cpp  planning_interface.cpp  real_time_interface.cpp  scene.cpp  ur5.cpp  visualize.cpp
ws_dlo/src/dlo_arm_planning_pkg/src/mpc/: mpc_base.cpp  multi_step_mpc.cpp
ws_dlo/src/dlo_arm_planning_pkg/src/planner/: joint_birrt.cpp  planner_base.cpp
ws_dlo/src/my_msgs/: CMakeLists.txt  package.xml
ws_dlo/src/my_msgs/msg/: DLOStateStamped.msg  Object.msg  Obstacles.msg  RobotLinkState.msg  RobotStateStamped.msg  Waypoint.msg
ws_dlo/src/my_msgs/srv/: ExecuteToEndPose.srv  LoadNewUnityScene.srv  Planning.srv
(+8 files in other folders)
